output for hardcoded country

--- a/test.ipynb
+++ b/test.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>iso_code</th>\n      <th>continent</th>\n      <th>location</th>\n      <th>date</th>\n      <th>total_cases</th>\n      <th>new_cases</th>\n      <th>new_cases_smoothed</th>\n      <th>total_deaths</th>\n      <th>new_deaths</th>\n      <th>new_deaths_smoothed</th>\n      <th>...</th>\n      <th>gdp_per_capita</th>\n      <th>extreme_poverty</th>\n      <th>cardiovasc_death_rate</th>\n      <th>diabetes_prevalence</th>\n      <th>female_smokers</th>\n      <th>male_smokers</th>\n      <th>handwashing_facilities</th>\n      <th>hospital_beds_per_thousand</th>\n      <th>life_expectancy</th>\n      <th>human_development_index</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>AFG</td>\n      <td>Asia</td>\n      <td>Afghanistan</td>\n      <td>2020-02-24</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>...</td>\n      <td>1803.987</td>\n      <td>0.0</td>\n      <td>597.029</td>\n      <td>9.59</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>37.746</td>\n      <td>0.5</td>\n      <td>64.83</td>\n      <td>0.511</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>AFG</td>\n      <td>Asia</td>\n      <td>Afghanistan</td>\n      <td>2020-02-25</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>...</td>\n      <td>1803.987</td>\n      <td>0.0</td>\n      <td>597.029</td>\n      <td>9.59</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>37.746</td>\n      <td>0.5</td>\n      <td>64.83</td>\n      <td>0.511</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>AFG</td>\n      <td>Asia</td>\n      <td>Afghanistan</td>\n      <td>2020-02-26</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>...</td>\n      <td>1803.987</td>\n      <td>0.0</td>\n      <td>597.029</td>\n      <td>9.59</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>37.746</td>\n      <td>0.5</td>\n      <td>64.83</td>\n      <td>0.511</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>AFG</td>\n      <td>Asia</td>\n      <td>Afghanistan</td>\n      <td>2020-02-27</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>...</td>\n      <td>1803.987</td>\n      <td>0.0</td>\n      <td>597.029</td>\n      <td>9.59</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>37.746</td>\n      <td>0.5</td>\n      <td>64.83</td>\n      <td>0.511</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>AFG</td>\n      <td>Asia</td>\n      <td>Afghanistan</td>\n      <td>2020-02-28</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000</td>\n      <td>...</td>\n      <td>1803.987</td>\n      <td>0.0</td>\n      <td>597.029</td>\n      <td>9.59</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>37.746</td>\n      <td>0.5</td>\n      <td>64.83</td>\n      <td>0.511</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>86452</th>\n      <td>ZWE</td>\n      <td>Africa</td>\n      <td>Zimbabwe</td>\n      <td>2021-05-02</td>\n      <td>38281.0</td>\n      <td>21.0</td>\n      <td>27.857</td>\n      <td>1570.0</td>\n      <td>2.0</td>\n      <td>1.857</td>\n      <td>...</td>\n      <td>1899.775</td>\n      <td>21.4</td>\n      <td>307.846</td>\n      <td>1.82</td>\n      <td>1.6</td>\n      <td>30.7</td>\n      <td>36.791</td>\n      <td>1.7</td>\n      <td>61.49</td>\n      <td>0.571</td>\n    </tr>\n    <tr>\n      <th>86453</th>\n      <td>ZWE</td>\n      <td>Africa</td>\n      <td>Zimbabwe</td>\n      <td>2021-05-03</td>\n      <td>38293.0</td>\n      <td>12.0</td>\n      <td>27.286</td>\n      <td>1573.0</td>\n      <td>3.0</td>\n      <td>1.857</td>\n      <td>...</td>\n      <td>1899.775</td>\n      <td>21.4</td>\n      <td>307.846</td>\n      <td>1.82</td>\n      <td>1.6</td>\n      <td>30.7</td>\n      <td>36.791</td>\n      <td>1.7</td>\n      <td>61.49</td>\n      <td>0.571</td>\n    </tr>\n    <tr>\n      <th>86454</th>\n      <td>ZWE</td>\n      <td>Africa</td>\n      <td>Zimbabwe</td>\n      <td>2021-05-04</td>\n      <td>38327.0</td>\n      <td>34.0</td>\n      <td>23.286</td>\n      <td>1574.0</td>\n      <td>1.0</td>\n      <td>1.286</td>\n      <td>...</td>\n      <td>1899.775</td>\n      <td>21.4</td>\n      <td>307.846</td>\n      <td>1.82</td>\n      <td>1.6</td>\n      <td>30.7</td>\n      <td>36.791</td>\n      <td>1.7</td>\n      <td>61.49</td>\n      <td>0.571</td>\n    </tr>\n    <tr>\n      <th>86455</th>\n      <td>ZWE</td>\n      <td>Africa</td>\n      <td>Zimbabwe</td>\n      <td>2021-05-05</td>\n      <td>38357.0</td>\n      <td>30.0</td>\n      <td>23.714</td>\n      <td>1574.0</td>\n      <td>0.0</td>\n      <td>1.286</td>\n      <td>...</td>\n      <td>1899.775</td>\n      <td>21.4</td>\n      <td>307.846</td>\n      <td>1.82</td>\n      <td>1.6</td>\n      <td>30.7</td>\n      <td>36.791</td>\n      <td>1.7</td>\n      <td>61.49</td>\n      <td>0.571</td>\n    </tr>\n    <tr>\n      <th>86456</th>\n      <td>ZWE</td>\n      <td>Africa</td>\n      <td>Zimbabwe</td>\n      <td>2021-05-06</td>\n      <td>38398.0</td>\n      <td>41.0</td>\n      <td>23.286</td>\n      <td>1575.0</td>\n      <td>1.0</td>\n      <td>1.143</td>\n      <td>...</td>\n      <td>1899.775</td>\n      <td>21.4</td>\n      <td>307.846</td>\n      <td>1.82</td>\n      <td>1.6</td>\n      <td>30.7</td>\n      <td>36.791</td>\n      <td>1.7</td>\n      <td>61.49</td>\n      <td>0.571</td>\n    </tr>\n  </tbody>\n</table>\n<p>86457 rows × 59 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 3
     }
    ],
    "source": [
@@ -141,77 +141,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "iso_code                                                 ZAF\n",
-       "continent                                             Africa\n",
-       "location                                        South Africa\n",
-       "date                                     2021-05-05 00:00:00\n",
-       "total_cases                                        1588221.0\n",
-       "new_cases                                             2073.0\n",
-       "new_cases_smoothed                                  1395.857\n",
-       "total_deaths                                         54557.0\n",
-       "new_deaths                                              46.0\n",
-       "new_deaths_smoothed                                   38.857\n",
-       "total_cases_per_million                            26778.892\n",
-       "new_cases_per_million                                 34.953\n",
-       "new_cases_smoothed_per_million                        23.535\n",
-       "total_deaths_per_million                             919.882\n",
-       "new_deaths_per_million                                 0.776\n",
-       "new_deaths_smoothed_per_million                        0.655\n",
-       "reproduction_rate                                       1.23\n",
-       "icu_patients                                             NaN\n",
-       "icu_patients_per_million                                 NaN\n",
-       "hosp_patients                                            NaN\n",
-       "hosp_patients_per_million                                NaN\n",
-       "weekly_icu_admissions                                    NaN\n",
-       "weekly_icu_admissions_per_million                        NaN\n",
-       "weekly_hosp_admissions                                   NaN\n",
-       "weekly_hosp_admissions_per_million                       NaN\n",
-       "new_tests                                            33414.0\n",
-       "total_tests                                       10773227.0\n",
-       "total_tests_per_thousand                             181.647\n",
-       "new_tests_per_thousand                                 0.563\n",
-       "new_tests_smoothed                                   26160.0\n",
-       "new_tests_smoothed_per_thousand                        0.441\n",
-       "positive_rate                                          0.053\n",
-       "tests_per_case                                          18.7\n",
-       "tests_units                                    people tested\n",
-       "total_vaccinations                                  366101.0\n",
-       "people_vaccinated                                   366101.0\n",
-       "people_fully_vaccinated                             366101.0\n",
-       "new_vaccinations                                     12920.0\n",
-       "new_vaccinations_smoothed                             9707.0\n",
-       "total_vaccinations_per_hundred                          0.62\n",
-       "people_vaccinated_per_hundred                           0.62\n",
-       "people_fully_vaccinated_per_hundred                     0.62\n",
-       "new_vaccinations_smoothed_per_million                  164.0\n",
-       "stringency_index                                         NaN\n",
-       "population                                        59308690.0\n",
-       "population_density                                    46.754\n",
-       "median_age                                              27.3\n",
-       "aged_65_older                                          5.344\n",
-       "aged_70_older                                          3.053\n",
-       "gdp_per_capita                                     12294.876\n",
-       "extreme_poverty                                         18.9\n",
-       "cardiovasc_death_rate                                 200.38\n",
-       "diabetes_prevalence                                     5.52\n",
-       "female_smokers                                           8.1\n",
-       "male_smokers                                            33.2\n",
-       "handwashing_facilities                                43.993\n",
-       "hospital_beds_per_thousand                              2.32\n",
-       "life_expectancy                                        64.13\n",
-       "human_development_index                                0.709\n",
-       "Name: 71838, dtype: object"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 21
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'str'>\n"
+     ]
     }
    ],
    "source": [
@@ -222,12 +160,14 @@
     "previous_day = za.iloc[-2] #2nd last day in the dataset\n",
     "\n",
     "\n",
+    "za.date\n",
     "za.tail(5) #see if the data is correct\n",
     "\n",
+    "from dateutil.parser import parse\n",
     "\n",
     "'''\n",
     "2 - Location\n",
-    "3 - Date\n",
+    "3 - Date`\n",
     "4 - total cases\n",
     "5 - new cases\n",
     "6 - total deaths\n",
@@ -235,9 +175,12 @@
     "34- total vaccinations\n",
     "37 - new vaccinations\n",
     "'''\n",
-    "# latest_info\n",
+    "# print(latest_info[4].astype(str) + 'hello')\n",
     "# previous_day\n",
-    "\n"
+    "# output = 'Location = za\\n total cases =' + latest_info[3].astype(str)\n",
+    "yes = latest_info[3].strftime('%Y-%m-%d')\n",
+    "\n",
+    "print(type(yes))"
    ]
   },
   {
